Publish sanitized v0.3.19 candidate source [skip ci]